added taxonomy specific text

--- a/communities/index.html
+++ b/communities/index.html
@@ -32,8 +32,11 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">
+				<a class="navbar-brand page-scroll" href="../#page-top">
 					<i class="fa fa-play-circle"></i>  <span class="light">Content</span>Mine
+				</a>
+				<a class="navbar-brand page-scroll" href="#page-top">
+					»  <span class="light">Communities
 				</a>
 			</div>
 
@@ -43,12 +46,12 @@
 					<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 					<li class="hidden"><a href="#page-top"></a></li>
 					
-					<li><a class="page-scroll" href="#clinical-and-animal-trials">clinical and animal trials</a></li>
-					<li><a class="page-scroll" href="#crystallography">crystallography</a></li>
-					<li><a class="page-scroll" href="#phylogenetics">phylogenetics</a></li>
-					<li><a class="page-scroll" href="#taxonomy">taxonomy</a></li>
-					<li><a class="page-scroll" href="#high-energy-physics">high energy physics</a></li>
-					<li><a class="page-scroll" href="#social-sciences-and-psychology">social sciences and psychology</a></li>
+					<li><a class="page-scroll" href="#clinical-and-animal-trials"><span class="full">Clinical and Animal </span><span class="half">Trials</span></a></li>
+					<li><a class="page-scroll" href="#crystallography"><span class="half">Crystal</span><span class="full">lography</span></a></li>
+					<li><a class="page-scroll" href="#phylogenetics"><span class="half">Phylo</span><span class="full">genetics</span></a></li>
+					<li><a class="page-scroll" href="#taxonomy"><span class="half">Taxon</span><span class="full">omy</span></a></li>
+					<li><a class="page-scroll" href="#high-energy-physics">HEP</a></li>
+					<li><a class="page-scroll" href="#social-sciences-and-psychology">SSP</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -63,7 +66,7 @@
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="brand-heading"><span class="light">Communities</h1>
 						<p class="intro-text">ContentMine communities are…</p>
-						<a href="#facts" class="btn btn-circle page-scroll">
+						<a href="#clinical-and-animal-trials" class="btn btn-circle page-scroll">
 							<i class="fa fa-angle-double-down animated"></i>
 						</a>
 					</div>
@@ -78,7 +81,7 @@
 				<h2>Clinical and animal trials</h2>
 				<p></p>
 
-				<a href="#tools" class="btn btn-circle page-scroll">
+				<a href="#crystallography" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
@@ -91,7 +94,7 @@
 				<h2>Crystallography</h2>
 				<p></p>
 
-				<a href="#communities" class="btn btn-circle page-scroll">
+				<a href="#phylogenetics" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
@@ -104,7 +107,7 @@
 			   <h2>Phylogenetics</h2>
 			   <p></p>
 
-				<a href="#activities" class="btn btn-circle page-scroll">
+				<a href="#taxonomy" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
@@ -115,9 +118,16 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Taxonomy</h2>
-				<p></p>
+				<p>We are working with <a href="http://plazi.org" target="_blank">Plazi</a> to shorten the time between thinking of a species and understanding everything about it. Toward that:</p>
+				<ul>
+					<li>we are building species and traits specific custom extraction templates that will work with our existing TDM tools</li>
+					<li>we are helping Plazi scientists extract species names and their treatments from the published articles</li>
+					<li>we are building RDF triples out of each atomic fact that may be queried via a RESTful interface</li>
+					<li>we are training scientists in using these tools</li>
+					<li>we are pursuing joint-funding opportunities to continue further development of the tools and to train scientists worldwide</li>
+				</ul>
 
-				<a href="#activities" class="btn btn-circle page-scroll">
+				<a href="#high-energy-physics" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
@@ -130,7 +140,7 @@
 				<h2>High energy physics</h2>
 				<p></p>
 	
-				<a href="#activities" class="btn btn-circle page-scroll">
+				<a href="#social-sciences-and-psychology" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
