added text on CM Communities

--- a/communities/index.html
+++ b/communities/index.html
@@ -46,12 +46,12 @@
 					<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 					<li class="hidden"><a href="#page-top"></a></li>
 					
-					<li><a class="page-scroll" href="#clinical-and-animal-trials"><span class="full">Clinical and Animal </span><span class="half">Trials</span></a></li>
-					<li><a class="page-scroll" href="#crystallography"><span class="half">Crystal</span><span class="full">lography</span></a></li>
-					<li><a class="page-scroll" href="#phylogenetics"><span class="half">Phylo</span><span class="full">genetics</span></a></li>
-					<li><a class="page-scroll" href="#taxonomy"><span class="half">Taxon</span><span class="full">omy</span></a></li>
-					<li><a class="page-scroll" href="#high-energy-physics">HEP</a></li>
-					<li><a class="page-scroll" href="#social-sciences-and-psychology">SSP</a></li>
+					<li><a class="page-scroll" href="#clinical-and-animal-trials"><span class="half">Trials</span><span class="full">Clinical and Animal Trials</span></a></li>
+					<li><a class="page-scroll" href="#crystallography"><span class="half">Crystal…</span><span class="full">Crystallography</span></a></li>
+					<li><a class="page-scroll" href="#phylogenetics"><span class="half">Phylo…</span><span class="full">Phylogenetics</span></a></li>
+					<li><a class="page-scroll" href="#taxonomy"><span class="half">Taxon…</span><span class="full">Taxonomy</span></a></li>
+					<li><a class="page-scroll" href="#high-energy-physics"><span class="half">HEP</span><span class="full">High Energy Physics</span></a></li>
+					<li><a class="page-scroll" href="#social-sciences-and-psychology"><span class="half">SSP</span><span class="full">Social Sciences and Psychology</span></a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -65,7 +65,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="brand-heading"><span class="light">Communities</h1>
-						<p class="intro-text">ContentMine communities are…</p>
+						<p class="intro-text">Communities are at the heart of ContentMine. Our long-term goal is to be the catalyst for sustainable domain-science communities that utilize text and data mining to extract structured information from content meant to be human-readable.</p>
 						<a href="#clinical-and-animal-trials" class="btn btn-circle page-scroll">
 							<i class="fa fa-angle-double-down animated"></i>
 						</a>
