cleaned up text

--- a/communities/index.html
+++ b/communities/index.html
@@ -98,8 +98,8 @@
 	<section id="clinical-and-animal-trials" class="container content-section">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Clinical and animal trials</h2>
-				<p></p>
+				<h2>Clinical and Animal Trials</h2>
+				<p>coming soon</p>
 
 				<a href="#crystallography" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
@@ -112,7 +112,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Crystallography</h2>
-				<p></p>
+				<p>coming soon</p>
 
 				<a href="#phylogenetics" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
@@ -125,7 +125,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 			   <h2>Phylogenetics</h2>
-			   <p></p>
+			   <p>coming soon</p>
 
 				<a href="#taxonomy" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
@@ -138,7 +138,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Taxonomy</h2>
-				<p>We are working with <a href="http://plazi.org" target="_blank">Plazi</a> to shorten the time between thinking of a species and understanding everything about it. Toward that:</p>
+				<p>We are working with <a href="http://plazi.org" target="_blank">Plazi</a> to bridge the gap between thinking about a species and understanding everything about it. Toward that:</p>
 				<ul>
 					<li>we are building species and traits specific custom extraction templates that will work with our existing TDM tools</li>
 					<li>we are helping Plazi scientists extract species names and their treatments from the published articles</li>
@@ -157,8 +157,8 @@
 	<section id="high-energy-physics" class="container content-section">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>High energy physics</h2>
-				<p></p>
+				<h2>High Energy Physics</h2>
+				<p>coming soon</p>
 	
 				<a href="#social-sciences-and-psychology" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
@@ -170,8 +170,8 @@
 	<section id="social-sciences-and-psychology" class="container content-section">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Social sciences and psychology</h2>
-				<p></p>
+				<h2>Social Sciences and Psychology</h2>
+				<p>coming soon</p>
 	
 				<a href="#activities" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
