--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                <h2>Communities</h2>
                <p>The currently targeted communities are:</p>
                 <ul>
-                    <li><a href="communities/#clinical-and-animal-trials">clinical and animal trials</a></li>
-                    <li><a href="communities/#crystallography">crystallography</a></li>
-                    <li><a href="communities/#phylogenetics">phylogenetics</a></li>
-                    <li><a href="communities/#taxonomy">taxonomy</a></li>
-                    <li><a href="communities/#high-energy-physics">high energy physics</a></li>
-                    <li><a href="communities/#social-sciences-and-psychology">social sciences and psychology</a></li>
+                    <li><a href="communities/#clinical-and-animal-trials">Clinical and Animal Trials</a></li>
+                    <li><a href="communities/#crystallography">Crystallography</a></li>
+                    <li><a href="communities/#phylogenetics">Phylogenetics</a></li>
+                    <li><a href="communities/#taxonomy">Taxonomy</a></li>
+                    <li><a href="communities/#high-energy-physics">High Energy Physics</a></li>
+                    <li><a href="communities/#social-sciences-and-psychology">Social Sciences and Psychology</a></li>
                 </ul>
                 
                 <a href="#activities" class="btn btn-circle page-scroll">
