added intro text for communities

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Communities</h2>
-                <p>The currently targeted communities are:</p>
+                <p>Communities are at the heart of ContentMine. Our long term strategy is to empower domain-science communities to become self-sufficient and sustainable in mining facts from scientific literature by teaching them how to customize and use our tools. In the short-term, we are working with a few select communities to hone our tools for their specific extraction needs, conducting training workshops, and jointly pursuing grant opportunities to help fund our efforts. The currently targeted communities are:</p>
                 <section id="only-one" data-accordion-group>
                     <section data-accordion>
                         <button data-control>Clinical and Animal Trials</button>
